# STM32Bootloader

./: CMakeLists.txt  README.md
include/: binary.h  port.h  serial_platform.h
src/: CMakeLists.txt  dev_table.c  hex.c  i2c.c  init.c  serial_w32.c  stm32.c
test/: CMakeLists.txt  STM32Bootloader.cpp  STM32Bootloader.h  main.cpp
